Fix to grid-row-gap

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ li {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
   column-gap: 16px;
+  grid-row-gap: 1em;
 }
 
 span.headline {
@@ -123,7 +124,7 @@ span.headline {
 }
 
 .item-1 {
-  overflow: visibile;
+  overflow: visible;
   height: 150px;
   background-size: cover;
   background-repeat: no-repeat;
